apps/base/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        # Προσθήκη fsGroup για να έχουν τα volumes τα σωστά permissions
        fsGroup: 101 
      containers:
      - name: nginx
        image: nxcreed/my-nginx-app:bf5f2ac4c805ab4881ba2dc598bc649f5e9f0544
        command: ["/bin/sh", "-c", "sed -i 's/listen  80;/listen 8080;/g' /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"]
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 8080 # Αλλαγή σε 8080 (Non-privileged port)
        livenessProbe:
          httpGet:
            path: /
            port: 8080 # Αλλαγή και εδώ
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "200m"
            memory: "64Mi"
          limits:
            cpu: "400m"
            memory: "128Mi"
        # Εδώ είναι η λύση για το Permission Denied
        volumeMounts:
        - name: cache-volume
          mountPath: /var/cache/nginx
        - name: run-volume
          mountPath: /var/run
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cache-volume
        emptyDir: {}
      - name: run-volume
        emptyDir: {}
      - name: tmp-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx # Πρέπει να ταιριάζει με το label του Deployment
  ports:
    - protocol: TCP
      port: 80         # Η θύρα στην οποία θα ακούει το Service εξωτερικά
      targetPort: 8080 # Η θύρα που ακούει ο nginx μέσα στο container
  type: ClusterIP      # Χρησιμοποίησε NodePort ή LoadBalancer αν θες πρόσβαση εκτός cluster
